
2012-12-04  Gwanglim Lee

        * Add window profile set/get API in elm_win

2012-12-05  Cedric Bail

	* Fix uninitialized data path in elm_flip, elm_gesture_layer,
	elm_interface_scrollable, els_scroller.

2012-12-05  Shilpa Onkar Singh (shilpa.singh@samsung.com)

	* Fix naviframe to not send hide signals even before item doens't created
  	yet.

2012-12-06  Cedric Bail

	* Fix possible segv in elm_quicklaunch infrastructure.
	* Fix elm_conform buffer to always finish with at least one '\0';
	* Fix forgotten break in elm_map that would have thrown error when the
	action was properly taken in fact.

2012-12-06  Daniel Juyung Seo (SeoZ)

	* Fix wheel scroll direction with shift.

2012-12-06  ChunEon Park (Hermet)

	* Fix the mapbuf to show the content always. Sometimes mapbuf couldn't show
	the content properly.

2012-12-07  Cedric Bail

	* Safer call to mkstemp in elm_cnp.
	* Simplify test in elm_entry_text_set.

2012-12-07  WooHyun Jung

	* Fix focus problem in multibuttonentry. Entry can get focus only when multibuttonentry is focused.

2012-12-08  ChunEon Park (Hermet)

	* Fix the naviframe title_set problem that caused the title visible status reset.

2012-12-10  Cedric Bail

	* Make sure private data is not NULL in elm_interface_scrollable.
	* Correctly handle failure case in _x11_notify_handler_image.
	* Fix missuse of EINA_INLIST_FOREACH in elm_transit.c.

2012-12-12  ChunEon Park (Hermet)

	* Update mapbuf forcely whenever it's states are changed.

2012-12-12  WooHyun Jung

	* Now, dummy object is always smart member of naviframe.

2012-12-14  Jiyoun Park

	* Fix naviframe's resize object problem when item was deleted.

2012-12-17  Chueon Park (Hermet)

	* Fix the popup that returned invalid action buttons.

2012-12-17  Chueon Park (Hermet)

	* Makes naviframe safety even if someone deletes the naviframe in transition finished cb.

2012-12-18  Chueon Park (Hermet)

	* Elm_transit image aniamtion effects supports elm_image object type.