@@ -96,6 +96,7 @@ Fixes:
    * Fix naviframe's resize object problem when item was deleted.
    * Fix the popup that returned invalid action buttons.
    * Fix the naviframe to not have crash even if user deletes the naviframe in the transition finished cb.
+   * Fix Don't elm_transit image animation use the image preloading to avoid image flickering.
 
 Removals:
 
