@@ -826,3 +826,7 @@
 2012-12-18  Chueon Park (Hermet)
 
 	* Elm_transit image aniamtion effects supports elm_image object type.
+
+2012-12-18  Chueon Park (Hermet)
+
+	* Don't Elm_transit image animation use image preloading to avoid image flickering.
